--- a/module3 solution/index.html
+++ b/module3 solution/index.html
@@ -9,16 +9,19 @@
 <body>
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
-		<div class="navbar-brand">
-					<a href="index.html"><h1>Food, LLC</h1></a>
-		</div>
+		<div class="container">
+			<div class="navbar-header">
+				<div class="navbar-brand">
+							<a href="index.html"><h1>Food, LLC</h1></a>
+				</div>
 		
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-					<span class="sr-only">Toogle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-			</button>
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+						<span class="sr-only">Toogle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+				</button>
+			</div>
 			<div id="collapsable-nav" class="collapse navbar-collapse">
 				<ul id="nav-list" class="nav navbar-nav navbar-right">
 					<li class="visible-xs list-element">
@@ -32,6 +35,7 @@
 					</li>
 				</ul>
 			</div>
+		</div>
 		</nav>
 	</header>
 	<div class="container-fluid">
@@ -84,5 +88,6 @@
 	
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
