--- a/module3 solution/index.html
+++ b/module3 solution/index.html
@@ -42,7 +42,7 @@
 		</nav>
 	</header>
 	<div class="container-fluid">
-	<h1 class="text-center color-white">Our Menu</h1>
+	<h1 class="text-center">Our Menu</h1>
 	
 	<div class="row">
 	<div class="content col-xs-12"><h2 class="text-center">Chicken</h2>Lorem ipsum is a pseudo-Latin text used in web design, typography
